changes from code review

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/index.html" />
+    <link href="https://ucum.nlm.nih.gov/ucum-lhc/" />
     <title>The UCUM-LHC Library Overview</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQueryUI.min.css" />
@@ -11,7 +11,7 @@
   <body>
     <!-- page header -->
     <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov" rel="canonical" id="logo"
+      <a href="http://lhncbc.nlm.nih.gov" id="logo"
          title="Lister Hill National Center for Biomedical Communications">
         <img src="demo-dist/assets/images/lhncbc.jpg"
              alt="Lister Hill National Center for Biomedical Communications" />
@@ -24,7 +24,7 @@
     </div>
     <div>
       <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
-      <a href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html">UCUM-LHC Demo</a>
+      <a href="demo.html">UCUM-LHC Demo</a>
     </div>
     <!-- end page header -->
     <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
@@ -44,7 +44,7 @@
 
     <h3>See the code in action</h3>
 
-    <p>Check out our <a href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html">
+    <p>Check out our <a href="demo.html">
       demonstration page</a> that illustrates the validation and conversion
       functions of the UCUM-LHC library.</p>
 
