--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
+    <link href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQueryUI.min.css" />
@@ -11,7 +11,7 @@
   <body id="demobody" onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
     <!-- page header -->
     <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov" rel="canonical" id="logo"
+      <a href="http://lhncbc.nlm.nih.gov" id="logo"
          title="Lister Hill National Center for Biomedical Communications">
         <img src="demo-dist/assets/images/lhncbc.jpg"
              alt="Lister Hill National Center for Biomedical Communications" />
