--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
+    <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQueryUI.min.css" />
@@ -24,7 +24,7 @@
     </div>
     <div>
       <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
-      <a href="https://ucum.nlm.nih.gov/ucum-lhc/index.html">UCUM-LHC Overview</a>
+      <a href="index.html">UCUM-LHC Overview</a>
     </div>
     <!-- end page header -->
     <h1>The UCUM-LHC Validator and Converter</h1>
