--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://ucum.nlm.nih.gov/ucum-lhc/" />
+    <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/" />
     <title>The UCUM-LHC Library Overview</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQueryUI.min.css" />
