--- a/demo.html
+++ b/demo.html
@@ -164,7 +164,8 @@
             <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
               may be used to override normal left-to-right evaluation
               of an expreession.  For example kg/m.s2 divides kg by m and multiplies the
-              result by s2.   kg/(m.s2) multiplies m by s2 and divides that by kg.</li>
+              result by s2.   kg/(m.s2) divides kg by the result of multiplying
+              m by s2.</li>
           </ul>
         </div><!-- hints div -->
       </div><!-- singleString div -->
