Added Google analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75410768-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-75410768-4');
+    </script>
+
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/" />
     <title>The UCUM-LHC Library Overview</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
