changes from code review

--- a/demo/UcumExpressionHints.html
+++ b/demo/UcumExpressionHints.html
@@ -4,25 +4,26 @@
 <ul class="small-print">
     <li>A <a href="http://unitsofmeasure.org/ucum.html#section-Prefixes">UCUM
         defined prefix</a> can be applied to metric units, e.g. kg for
-        kilo gram (where k is the prefix and g is the base unit).</li>
+        kilogram (where k is the prefix kilo and g is the base unit gram).</li>
     <li>Simple units may be <a href="http://unitsofmeasure.org/ucum.html#para-9">
         raised to a power</a> by appending an integer number to the end of the
-        unit term.  Negative exponents must be preceded by a minus sign ('-').
-        Positive exponents may be preceded by a plus sign ('+') although the
-        sign may be omitted.</li>
+        unit term, e.g., m2 for a square meter.  Negative exponents must be
+        preceded by a minus sign ('-').  Positive exponents may be preceded by
+        a plus sign ('+') although the sign may be omitted.</li>
     <li>All units can be combined in an <a href="http://unitsofmeasure.org/ucum.html#para-7">
         algebraic term</a> using the operators for multiplication (period '.')
-        and division (solidus '/').</li>
+        and division (solidus '/'), e.g., 2.m.</li>
     <li>No blanks are allowed within the unit expression.</li>
     <li>Multiple terms in an expression must be separated by an arithmetic
         operator - either the multiplication operator (.) or the division
-        operator (/).</li>
+        operator (/), e.g., 2.m, not 2m.</li>
     <li>The multiplication operator (.) must be explicity specified; it is never
         assumed.</li>
     <li>While the multiplication operator (.) must appear between two unit terms,
         the division operator (/) may appear at the beginning of the expression,
         indicating inversion of the following term.  However, the division
-        operator normally appears between two terms.</li>
+        operator normally appears between two terms.  So /dL is a valid unit
+        indicating "per deciliter".</li>
     <li>Terms are evaluated from left to right, with multiplication and
         division having the same precedence.</li>
     <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
