move demo.html to demo directory

--- a/demo/UcumExpressionHints.html
+++ b/demo/UcumExpressionHints.html
@@ -21,9 +21,9 @@
         assumed.</li>
     <li>While the multiplication operator (.) must appear between two unit terms,
         the division operator (/) may appear at the beginning of the expression,
-        indicating inversion of the following term.  However, the division
-        operator normally appears between two terms.  So /dL is a valid unit
-        indicating "per deciliter".</li>
+        indicating inversion of the following term.  So /dL is a valid unit
+        indicating "per deciliter".  However, the division
+        operator normally appears between two terms.</li>
     <li>Terms are evaluated from left to right, with multiplication and
         division having the same precedence.</li>
     <li><a href="http://unitsofmeasure.org/ucum.html#para-10">Parentheses</a>
