changes to limit width of text sections

--- a/demo/UcumEssenceModifications.html
+++ b/demo/UcumEssenceModifications.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="../demo-dist/ucumDemo.min.css" />
 </head>
-<body id="demobody">
+<body id="demobody" class="limitWidth">
 <!-- page header -->
 <div id="header">
     <a href="http://lhncbc.nlm.nih.gov" id="logo"
