--- a/demo/demo.html
+++ b/demo/demo.html
@@ -119,7 +119,7 @@
 
             </div> <!-- outer-container -->
             <div id="molecular-weight">
-              Molecular weight of the substance being converted: &nbsp
+              Molecular weight of the substance being converted: &nbsp;
               <input type="text" id="moleWeight"
                      onchange="demoPkg.UcumDemo.getInstance().checkNumVal('moleWeight')">
             </div>
