initial commit to fix conversion of invalid unit, add meta data, and fix processing flow on starting converter tab

--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,8 @@
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/demo.html" />
     <title>UCUM-LHC Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="description" content="UCUM LHC unit code validator and conversion calculator">
+    <meta name="keywords" content="UCUM,LHC,Unit Codes">
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/16.0.1/autocomplete-lhc_jQueryUI.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="demo-dist/ucumDemo.min.css" rel="stylesheet"/>
