Clickjacking defense for legacy browser(IE11)
LF-1384

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
       gtag('config', 'UA-75410768-4');
     </script>
 
+    <style id="antiClickjack">
+      body{display:none !important;}
+    </style>
+    <script type="text/javascript">
+      if (self === top) {
+        var antiClickjack = document.getElementById("antiClickjack");
+        antiClickjack.parentNode.removeChild(antiClickjack);
+      } else {
+        top.location = self.location;
+      }
+    </script>
+
     <link rel="canonical" href="https://ucum.nlm.nih.gov/ucum-lhc/" />
     <title>The UCUM-LHC Library Overview</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
