A description of the CSV format has been changed on the demo page.
LF-1333

--- a/demo.html
+++ b/demo.html
@@ -271,9 +271,18 @@
             <b>v</b>alues file on your system.
           <ul>
             <li>Use the browse button below to select the file.</li>
+            <li>Your file must meets the following requirements:
+              <ul>
+                <li>a comma is used to separate values;</li>
+                <li>it must includes row with column headers;</li>
+                <li>if the value in the cell should contain a commas, double quotes
+                  or newlines characters, you need to enclose the value in double
+                  quotes and where you want to use double quotes, repeat them twice.
+                </li>
+              </ul>
+            </li>
             <li>You will then be asked for the name of the column that contains
-              the expressions to be validated.  (Your file must include column
-              headers).
+              the expressions to be validated.
             </li>
             <li>A copy of your file will be created that includes three
               additional columns at the end, confirming what expression was
