--- a/demo/demo.html
+++ b/demo/demo.html
@@ -203,12 +203,12 @@
             <b>v</b>alues file on your system.
           <ul>
             <li>Use the browse button below to select the file.</li>
-            <li>Your file must meets the following requirements:
+            <li>Your file must meet the following requirements:
               <ul>
                 <li>a comma is used to separate values;</li>
-                <li>it must includes row with column headers;</li>
-                <li>if the value in the cell should contain a commas, double quotes
-                  or newlines characters, you need to enclose the value in double
+                <li>the first row must be column headers;</li>
+                <li>if the value in the cell contains commas, double quotes
+                  or newlines characters, you will need to enclose the value in double
                   quotes and where you want to use double quotes, repeat them twice.
                 </li>
               </ul>
