Example cell value in CSV added.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -221,7 +221,8 @@
                 <li>the first row must be column headers;</li>
                 <li>if the value in the cell contains commas, double quotes
                   or newlines characters, you will need to enclose the value in double
-                  quotes and where you want to use double quotes, repeat them twice.
+                  quotes and where you want to use double quotes, repeat them twice.<br>
+                  (Example: A cell value of <code>Say "Hi"</code> would become <code>"Say ""Hi"""</code>.)
                 </li>
               </ul>
             </li>
