--- a/demo/demo.html
+++ b/demo/demo.html
@@ -145,7 +145,7 @@
               <!-- this section is built in the demo code when the page is loaded -->
             </div> <!-- advancedSearchCnv division -->
           </div><!-- inner-section -->
-          <!---  Not using this list -- for now
+          <!---  Not using this list for now
           onblur="demoPkg.UcumDemo.getInstance().getCommensurables('convertFrom',
                                                                    'convertTo',
                                                                    'resultString')">
