Updated Google analytics tag
LF-1638

--- a/demo.html
+++ b/demo.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75410768-4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-75410768-4');
-    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-59GQ6JK');</script>
+    <!-- End Google Tag Manager -->
 
     <style id="antiClickjack">
       body{display:none !important;}
@@ -33,6 +33,12 @@
   </head>
   <body id="demobody" onhashchange="demoPkg.UcumDemo.getInstance().checkTabSwitch();"
         onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
+        height="0" width="0" style="display:none;visibility:hidden"
+        title="googletagmanager"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- page header -->
     <div id="header">
