Updated jQuery and added subresource integrity hashes

--- a/demo.html
+++ b/demo.html
@@ -27,8 +27,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="Unified Code of Units of Measure (UCUM) LHC unit code validator and conversion calculator">
     <meta name="keywords" content="UCUM,LHC,Unit Codes,Units of Measure">
-    <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/16.0.1/autocomplete-lhc_jQueryUI.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet"
+     href="https://clinicaltables.nlm.nih.gov/autocomplete-lhc-versions/18.1.1/autocomplete-lhc.min.css"
+     integrity="JjNQGLGKwnlylBNqm5Al8cA7jt1nF5dHsagzjEEE85ZHogKi96zVUB2wehoMQAZ9"
+     crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+     integrity="BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+     crossorigin="anonymous" />
     <link href="demo-dist/ucumDemo.min.css" rel="stylesheet"/>
   </head>
   <body id="demobody" onhashchange="demoPkg.UcumDemo.getInstance().checkTabSwitch();"
@@ -401,9 +406,15 @@
     </div><!-- fine-print -->
     <!-- end page footer -->
 
-    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/16.0.1/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+     crossorigin="anonymous"></script>
+    <script src="https://clinicaltables.nlm.nih.gov/autocomplete-lhc-versions/18.1.1/autocomplete-lhc.min.js"
+     integrity="y5lNC4qz9o7wG9yIIQQNcxxqEkWqnPit6/VnEJ9jag/gFgocblckjXdkE4NWh+0U"
+     crossorigin="anonymous"></script>
     <script src="demo-dist/ucum-demo.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+     crossorigin="anonymous"></script>
   </body>
 </html>
