Moved the source files for SSI-generated pages into their own directory

--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -174,7 +174,7 @@
             </li>
           </ul>
           <div id="cnvHints" class="limitWidth" style="display: none">
-            <!--#include file="UcumExpressionHints.shtml" -->
+            <!--#include file="../UcumExpressionHints.shtml" -->
           </div><!-- hints div -->
           <p class="small-print">Disclaimer:  &nbsp;Conversion results are for
             demonstration purposes only.  Before relying on the unit conversions
@@ -217,7 +217,7 @@
           </div> <!-- advancedSearchCnv division -->
 
           <div id="valHints" class="limitWidth" style="display: none">
-            <!--#include file="UcumExpressionHints.shtml" -->
+            <!--#include file="../UcumExpressionHints.shtml" -->
           </div><!-- hints div -->
         </div><!-- singleString div -->
         <div id="filevalidation" class="section">
@@ -281,7 +281,7 @@
               <a href="http://unitsofmeasure.org">Unified Code for Units Of
               Measure</a>
               <a href="http://unitsofmeasure.org/ucum-essence.xml">ucum-essence.xml</a>
-              file, <!--#include file="UcumEssenceVersion.shtml" -->, with
+              file, <!--#include file="../UcumEssenceVersion.shtml" -->, with
               <a href="demo/UcumEssenceModifications.html">minor content changes.</a>
             </li>
             <li>The ucum-essence.xml file has also been extended with commonly used
