--- a/demo/ssi-templates/pages/demo.html
+++ b/demo/ssi-templates/pages/demo.html
@@ -38,26 +38,9 @@
   </head>
   <body id="demobody" onhashchange="demoPkg.UcumDemo.getInstance().checkTabSwitch();"
         onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
-        height="0" width="0" style="display:none;visibility:hidden"
-        title="googletagmanager" sandbox></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
-    <!-- page header -->
-    <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov" id="logo"
-         title="Lister Hill National Center for Biomedical Communications">
-        <img src="demo-dist/assets/images/lhncbc.jpg"
-             alt="Lister Hill National Center for Biomedical Communications" />
-      </a>
-      <div id="siteNameBox">
-        <a href="index.html"><span id=siteName>UCUM-LHC</span><br>
-          <span id=tagline>A Unified Code for Units of Measure Software Library
-            from the National Library of Medicine</span></a>
-      </div>
-    </div> <!-- end page header -->
+    <!--#include file="../header.shtml" -->
+
     <!-- links to other ucum pages -->
     <div>
       <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
