--- a/demo/ssi-templates/pages/index.html
+++ b/demo/ssi-templates/pages/index.html
@@ -27,30 +27,13 @@
     <link href="demo-dist/ucumDemo.min.css" rel="stylesheet"/>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
-        height="0" width="0" style="display:none;visibility:hidden"
-        title="googletagmanager" sandbox></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- page header -->
-    <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov" id="logo"
-         title="Lister Hill National Center for Biomedical Communications">
-        <img src="demo-dist/assets/images/lhncbc.jpg"
-             alt="Lister Hill National Center for Biomedical Communications" />
-      </a>
-      <div id="siteNameBox">
-        <a href="index.html"><span id=siteName>UCUM-LHC</span><br>
-          <span id=tagline>A Unified Code for Units of Measure Software Library
-            from the National Library of Medicine</span></a>
-      </div>
-    </div>
+    <!--#include file="../header.shtml" -->
+
     <div>
       <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
       <a href="demo.html">UCUM-LHC Demo</a>
     </div>
-    <!-- end page header -->
+
     <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
 
     <p>The UCUM-LHC library is a javascript library that provides validation and
