--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     <link href="demo-dist/ucumDemo.min.css" rel="stylesheet"/>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
+        <!-- Google Tag Manager (noscript) -->
     <noscript><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
         height="0" width="0" style="display:none;visibility:hidden"
         title="googletagmanager" sandbox></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <!-- page header -->
     <div id="header">
       <a href="http://lhncbc.nlm.nih.gov" id="logo"
@@ -45,12 +46,15 @@
           <span id=tagline>A Unified Code for Units of Measure Software Library
             from the National Library of Medicine</span></a>
       </div>
-    </div>
+    </div> <!-- end page header -->
+
+
+
     <div>
       <a href="https://ucum.nlm.nih.gov">UCUM Resources</a>&nbsp; &nbsp;
       <a href="demo.html">UCUM-LHC Demo</a>
     </div>
-    <!-- end page header -->
+
     <h1 id="overview-title">The UCUM-LHC Library Overview</h1>
 
     <p>The UCUM-LHC library is a javascript library that provides validation and
